--- a/views/allbooks.ejs
+++ b/views/allbooks.ejs
@@ -36,20 +36,22 @@
   </nav>
 
   <div class="mybooks-wrapper">
-<!-- <% book.forEach( (book) => { %> -->
+<% book.forEach( (book) => { %>
     <div class="mybooks">
       <div class="cover-wrapper">
         <!-- here goes the cover -->
       </div>
       <div class="book-list-info">
         <ul>
-          <!-- <li><%= book.title %></li>
-          <li><%= book.author %></li> -->
-          <!-- <a href="/book/<%= book._id %>">show</a> -->
+          <!-- test -->
+          <li><%= book.title %></li>
+          <li><%= book.author %></li>
+          <a href="/book/<%= book._id %>">See Book</a>
+          <!-- test -->
         </ul>
       </div>
     </div>
-<!-- <% }); %> -->
+<% }); %>
   </div>
 
 </div>
