--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -13,7 +13,7 @@
     <form action="/login" method="POST" id="login-form">
 
         <div class="form-group">
-          <input type="text" class="basic-form" name="username" placeholder="myemail@email.com">
+          <input type="text" class="basic-form" name="username" placeholder="@username">
           <input type="password" class="basic-form" name="password" placeholder="password">
         </div>
 
