--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -33,9 +33,10 @@
     <form action="/signup" method="POST" id="login-form">
 
         <div class="form-group">
-          <input type="text" class="basic-form" name="name" placeholder="username">
+          <input type="text" class="basic-form" name="name" placeholder="name">
           <input type="text" class="basic-form" name="city" placeholder="city">
-          <input type="text" class="basic-form" name="username" placeholder="myemail@email.com">
+          <input type="text" class="basic-form" name="email" placeholder="myemail@email.com">
+          <input type="text" class="basic-form" name="username" placeholder="@username">
           <input type="password" class="basic-form" name="password" placeholder="password">
         </div>
         <button type="submit" class="send-button">Signup</button>
