--- a/views/editbook.ejs
+++ b/views/editbook.ejs
@@ -2,7 +2,7 @@
   <div class="navbar-wrapper">
     <h3 class="brand">bookup</h3>
     <a href="/logout" class="navbar-button nabvar-button-right">Logout</a>
-    <a href="/profile" class="navbar-button navbar-button-left">Profile</a>
+    <a href="/" class="navbar-button navbar-button-left">Home</a>
   </div>
 </nav>
 <div class="login-container">
@@ -17,10 +17,11 @@
           <input type="text" class="basic-form" name="genre" placeholder="genre">
           <input type="text" class="basic-form" name="city" placeholder="city">
           <input type="text" class="basic-form" name="pages" placeholder="pages">
-          <textarea class="description-form" name="name" >description</textarea>
+          <textarea class="description-form" name="name" placeholder="description"></textarea>
           <input type="file" class="basic-form" name="cover" placeholder="upload cover">
 
         </div>
+        
         <button type="button" class="send-button">Save</button>
 
     </form>
