--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,10 @@
     </div>
     <div class="profile-data-wrapper">
       <ul>
+        <li><%= user.name %></li>
         <li><%= user.username %></li>
-        <li><%= user.city %></li>
         <li><%= user.email %></li>
+        <li><%= user.city %></li>
         <li><%= user.phone %></li>
         <li><%= user.province %></li>
         <li><%= user.country %></li>
