edd delete functionality, available default in model, available books, and struggling with display my books with if statement

--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -18,7 +18,7 @@
             <input type="text" class="basic-form" name="title" placeholder="title">
             <input type="text" class="basic-form" name="author" placeholder="author">
             <input type="text" class="basic-form" name="genre" placeholder="genre">
-            <input type="text" class="basic-form" name="pages" placeholder="pages">
+            <input type="number" class="basic-form" name="pages" placeholder="pages">
             <textarea class="description-form" name="description" placeholder="description"></textarea>
             <div class="add-file">
               <label for="cover">Upload a cover</label>
