--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -340,6 +340,13 @@ body {
   float: left;
 }
 
+.profile-data-wrapper li:first-child {
+  font-size: 16px;
+  font-weight: bold;
+  border-bottom: 1px solid #666;
+  margin-bottom: 5px;
+}
+
 .profile-data-wrapper ul {
   list-style-type: none;
 }
@@ -347,9 +354,10 @@ body {
 .profile-data-wrapper li {
   width: 100%;
   font-size: 14px;
-  margin-top: 5px;
+  margin-top: 0px;
   padding-bottom: 5px;
   /*border-bottom: 1px dashed #aaa;*/
+  line-height: 13px;
 }
 
 .edit-profile-button {
@@ -416,7 +424,7 @@ body {
   height: auto;
   margin: 10px 11px;;
   background: #eee;
-  border-radius: 6px 6px 6px 6px;
+  /*border-radius: 6px 6px 6px 6px;*/
   box-sizing: border-box;
   float: left;
 }
@@ -467,10 +475,17 @@ body {
 
 .book-options a {
   text-decoration: none;
+  margin-left: 5px;
 }
 
 .book-options a:first-child {
-  margin-right: 10px;
+  color: #7fc857;
+  font-weight: bolder;
+  margin-right: 5px;
+}
+
+.book-options a:nth-child(2) {
+  color: #282828;
 }
 
 .book-options a:last-child {
@@ -494,8 +509,17 @@ body {
     padding: 10px 10px 0px 7px;
   }
 
+  .profile-data-wrapper li:first-child {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 5px;
+    margin-bottom: 7px;
+    border-bottom: 1px solid #666;
+  }
   .profile-data-wrapper li {
-    font-size: 15px;
+    font-size: 14px;
+    margin: -2px;
+    line-height: 20px;
   }
 
   .profile-picture-wrapper {
