started work on upload profile pic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,10 @@
   <div class="profile-wrapper">
 
     <div class="profile-picture-wrapper">
-      <!-- here goes the profile picture -->
+          <section> <!-- added by Imre -->
+
+                <!-- <img src="<%= picture.pic_path %>" alt="<%= picture.pic_name %>" /> -->
+          </section>
     </div>
     <div class="profile-data-wrapper">
       <ul>
