--- a/views/editbook.ejs
+++ b/views/editbook.ejs
@@ -8,21 +8,25 @@
 <div class="login-container">
 
   <div class="form-wrapper">
-    <form action="/signup" method="POST" id="login-form">
+    <form action="/<%= book._id %>" method="POST" id="login-form">
 
-        <h3 class="new-account-header">Edit this book</h3>
+        <h3 class="new-account-header">Edit "<%= book.title %>"</h3>
         <div class="form-group">
-          <input type="text" class="basic-form" name="title" placeholder="title">
-          <input type="text" class="basic-form" name="author" placeholder="author">
-          <input type="text" class="basic-form" name="genre" placeholder="genre">
-          <input type="text" class="basic-form" name="city" placeholder="city">
-          <input type="text" class="basic-form" name="pages" placeholder="pages">
+          <input type="text" class="basic-form" name="title" value="<%= book.title %>"placeholder="title">
+          <input type="text" class="basic-form" name="author" value="<%= book.author %>" placeholder="author">
+          <input type="text" class="basic-form" name="genre" value="<%= book.genre %>" placeholder="genre">
+          <input type="number" class="basic-form" name="pages" value="<%= book.pages %>" placeholder="pages">
           <textarea class="description-form" name="name" placeholder="description"></textarea>
           <input type="file" class="basic-form" name="cover" placeholder="upload cover">
+          <label for="available">Do you want to share this book?</label>
+          <select id="available" name="available">
+            <option value="yes">YES</option>
+            <option value="no">NO</option>
+          </select>
 
         </div>
-        
-        <button type="button" class="send-button">Save</button>
+
+        <button type="submit" class="send-button">Save Changes</button>
 
     </form>
   </div>
