--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@
           <li>Pages</li> -->
         </ul>
         <div class="book-options">
-          <a href="/edit-book">Edit</a>
+          <a href="/<%= book._id %>/edit">Edit</a>
           <a href="#">Free</a>
           <a href="/<%=book._id%>/deletebook">Delete</a>
 
