upload profile image functionality added

--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -8,8 +8,7 @@
 <div class="login-container">
 
   <div class="form-wrapper">
-    <form action="/" method="POST" id="login-form">
-
+    <form action="/edit" method="POST" enctype="multipart/form-data" id="login-form">
         <h3 class="new-account-header">Edit your profile</h3>
         <div class="form-group">
 
