--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,10 +11,7 @@
   <div class="profile-wrapper">
 
     <div class="profile-picture-wrapper">
-          <section> <!-- added by Imre -->
-
-                <!-- <img src="<%= picture.pic_path %>" alt="<%= picture.pic_name %>" /> -->
-          </section>
+      <img src="<%= user.picture%>" alt="profile picture" class="profile-picture">
     </div>
     <div class="profile-data-wrapper">
       <ul>
