Add available book functionality (set to true or false) in addbook and editbook

--- a/views/availablebooks.ejs
+++ b/views/availablebooks.ejs
@@ -39,7 +39,7 @@
   <div class="mybooks-wrapper">
 
   <% book.forEach((book) => { %>
-    <% if (book.available === "yes") { %>
+    <% if (book.available === true) { %>
     <div class="mybooks">
       <div class="cover-wrapper">
         <!-- here goes the cover -->
