--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -20,6 +20,9 @@
             <input type="text" class="basic-form" name="genre" placeholder="genre">
             <input type="number" class="basic-form" name="pages" placeholder="pages">
             <textarea class="description-form" name="description" placeholder="description"></textarea>
+            <label for="available">Do you want to share this book?</label> <br>
+              <input type="radio" name="available" value="1"> Yes <br>
+              <input type="radio" name="available" value="0"> No
             <div class="add-file">
               <label for="cover">Upload a cover</label>
               <input type="file" class="upload" id="cover" name="cover">
