upload images functionality for new book and edit book added

--- a/views/editbook.ejs
+++ b/views/editbook.ejs
@@ -8,21 +8,22 @@
 <div class="login-container">
 
   <div class="form-wrapper">
-    <form action="/signup" method="POST" id="login-form">
+    <form action="/editbook" method="POST" id="login-form" enctype="multipart/form-data">
 
         <h3 class="new-account-header">Edit this book</h3>
         <div class="form-group">
-          <input type="text" class="basic-form" name="title" placeholder="title">
-          <input type="text" class="basic-form" name="author" placeholder="author">
-          <input type="text" class="basic-form" name="genre" placeholder="genre">
-          <input type="text" class="basic-form" name="city" placeholder="city">
-          <input type="text" class="basic-form" name="pages" placeholder="pages">
-          <textarea class="description-form" name="name" placeholder="description"></textarea>
-          <input type="file" class="basic-form" name="cover" placeholder="upload cover">
-
+          <input type="text" class="basic-form" name="title" placeholder="title" value="<%= book.title %>">
+          <input type="text" class="basic-form" name="author" placeholder="author" value="<%= book.author %>">
+          <input type="text" class="basic-form" name="genre" placeholder="genre" value="<%= book.genre %>">
+          <input type="text" class="basic-form" name="city" placeholder="city" value="<%= book.city %>">
+          <input type="text" class="basic-form" name="pages" placeholder="pages" value="<%= book.pages %>">
+          <textarea class="description-form" name="name" placeholder="description" value="<%= book.description %>"></textarea>
+          <input type="file" class="basic-form" name="cover" placeholder="upload cover" value="<%= book.cover %>">
+          <input type="hidden" class="basic-form" name="id" placeholder="bookid" value="<%= book._id %>">
+          <input type="hidden" class="basic-form" name="bookPicture" placeholder="bookid" value="<%= book.picture %>">
         </div>
-        
-        <button type="button" class="send-button">Save</button>
+
+        <button type="submit" class="send-button">Save</button>
 
     </form>
   </div>
