--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -11,7 +11,7 @@
 
 
     <div class="form-wrapper">
-      <form action="/newBook" method="POST">
+      <form action="/newBook" method="POST" enctype="multipart/form-data">
 
           <h3 class="new-account-header">Add your book</h3>
           <div class="form-group">
@@ -19,6 +19,8 @@
             <input type="text" class="basic-form" name="author" placeholder="author">
             <input type="text" class="basic-form" name="genre" placeholder="genre">
             <input type="number" class="basic-form" name="pages" placeholder="pages">
+            <input type="hidden" class="basic-form" name="id" placeholder="bookid">
+            <input type="hidden" class="basic-form" name="bookPicture" placeholder="bookid">
             <textarea class="description-form" name="description" placeholder="description"></textarea>
             <div class="add-file">
               <label for="cover">Upload a cover</label>
