--- a/views/allbooks.ejs
+++ b/views/allbooks.ejs
@@ -12,7 +12,7 @@
 
 
     <div class="profile-picture-wrapper">
-      <!-- here goes the profile picture -->
+      <img src="<%= user.picture%>" alt="profile-picture" class="profile-picture">
     </div>
     <div class="profile-data-wrapper">
       <ul>
