--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -20,7 +20,9 @@
           <input type="number" class="basic-form" id="age" name="age" value="<%= user.age %>" placeholder="age">
           <input type="text" class="basic-form" id="gender" name="gender" value="<%= user.gender %>"  placeholder="gender">
           <label for="image">Upload a profile image</label>
-          <input type="file" class="upload" id="profile_image" name="profile_image"> <!-- added by Imre -->
+
+
+          <input type="file" class="upload" id="profile_image" name="profile_image" value=""> <!-- added by Imre -->
           <!-- <a href="/uploadimage">Upload image</a> -->
           <!-- <input type="text" class="form-new-account" name="image" placeholder="upload image"> -->
           <!-- <input type="password" class="basic-form" name="password" placeholder="password">
