upload image text centered in editbook.ejs and cancel-link added

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -493,6 +493,12 @@ body {
   color: rgb(171, 4, 34);
 }
 
+/*---------------EDIT BOOK VIEW---------------*/
+#cover {
+  text-align: center;
+}
+
+
 /*--------------MEDIA QUERIES------------*/
 
 @media (min-width: 500px) {
