show book functionality added

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -301,6 +301,7 @@ body {
   resize: none;
 }
 
+
 /*----------------------PROFILE---------------------*/
 
 .profile-wrapper {
@@ -498,6 +499,17 @@ body {
   text-align: center;
 }
 
+/*----------------------SHOW BOOK VIEW---------------------*/
+#showbook-text span {
+  font-weight: bold;
+}
+#showbook-cover {
+  display: block;
+  margin: 0 auto;
+  height: 30%;
+  width: 30%;
+  margin-bottom: 1rem;
+}
 
 /*--------------MEDIA QUERIES------------*/
 
