--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,7 +71,7 @@
 
           <a href="/editbook/<%=book._id%>">Edit</a>
 
-          <a href="#">Free</a>
+          <a href="/<%=book._id%>/showbook">Show</a>
           <a href="/<%=book._id%>/deletebook">Delete</a>
 
         </div>
