--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -421,7 +421,7 @@ body {
 
 .mybooks {
   width: 150px;
-  height: auto;
+  height: 270px;
   margin: 10px 11px;;
   background: #eee;
   /*border-radius: 6px 6px 6px 6px;*/
