--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@
         </ul>
         <div class="book-options">
 
-          <a href="/editbook/<%=book._id%>">Edit</a>
+          <a href="/<%= book._id %>/edit">Edit</a>
 
           <a href="#">Free</a>
           <a href="/<%=book._id%>/deletebook">Delete</a>
