--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -7,11 +7,8 @@
 </nav>
 <div class="container">
 
-
-
-
     <div class="form-wrapper">
-      <form action="/newBook" method="POST" enctype="multipart/form-data">
+      <form action="/newbook" method="POST" enctype="multipart/form-data">
 
           <h3 class="new-account-header">Add your book</h3>
           <div class="form-group">
