cleaning the mess after commiting a wrong thing

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -13,8 +13,8 @@
     <form action="/login" method="POST" id="login-form">
 
         <div class="form-group">
-          <input type="text" class="basic-form" name="username" placeholder="@username">
-          <input type="password" class="basic-form" name="password" placeholder="password">
+          <input type="text" class="basic-form" name="username" placeholder="@username" required="">
+          <input type="password" class="basic-form" name="password" placeholder="password" required="">
         </div>
 
         <!-- <% if (typeof message !== "undefined") { %>
