--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -421,7 +421,7 @@ body {
 
 .mybooks {
   width: 150px;
-  height: 270px;
+  height: 260px;
   margin: 10px 11px;;
   background: #eee;
   /*border-radius: 6px 6px 6px 6px;*/
@@ -436,23 +436,42 @@ body {
 }
 
 .new {
-  height: 270px;
+  height: 260px;
+}
+
+.new a {
+  cursor: pointer;
 }
 
 .cover-wrapper {
   width: 100%;
-  height: 200px;
-  background: #777;
+  height: 180px;
+  background: #bbb;
   float: left;
   box-sizing: border-box;
   margin-bottom: 10px;
+  overflow: hidden;
+  display: flex;
+  cursor: pointer;
+}
+
+.cover-wrapper img {
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
+  text-align: center;
+  -ms-align-items: center;
+  margin: auto;
 }
 
 .cover {
   width: 98%;
   margin: 0 auto;
   height: 100%;
+}
 
+.book-list-info {
+  position: relative;
 }
 
 .book-list-info ul {
@@ -465,7 +484,6 @@ body {
   font-size: 13px;
   margin-bottom: 3px;
 }
-
 
 .book-options {
   font-size: 13px;
