--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -12,16 +12,16 @@
 
           <h3 class="new-account-header">Add your book</h3>
           <div class="form-group">
-            <input type="text" class="basic-form" name="title" placeholder="title">
-            <input type="text" class="basic-form" name="author" placeholder="author">
+            <input type="text" class="basic-form" name="title" placeholder="title" required="">
+            <input type="text" class="basic-form" name="author" placeholder="author" required="">
             <input type="text" class="basic-form" name="genre" placeholder="genre">
             <input type="number" class="basic-form" name="pages" placeholder="pages">
             <input type="hidden" class="basic-form" name="id" placeholder="bookid">
             <input type="hidden" class="basic-form" name="bookPicture" placeholder="bookid">
             <textarea class="description-form" name="description" placeholder="description"></textarea>
             <label for="available">Do you want to share this book?</label> <br>
-              <input type="radio" name="available" value="1"> Yes <br>
-              <input type="radio" name="available" value="0"> No
+              <input type="radio" name="available" value="1" required=""> Yes <br>
+              <!-- <input type="radio" name="available" value="0"> No -->
             <div class="add-file">
               <label for="cover">Upload a cover</label>
               <input type="file" class="upload" id="cover" name="cover">
