--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -33,11 +33,11 @@
     <form action="/signup" method="POST" id="login-form">
 
         <div class="form-group">
-          <input type="text" class="basic-form" name="name" placeholder="name">
-          <input type="text" class="basic-form" name="city" placeholder="city">
-          <input type="text" class="basic-form" name="email" placeholder="myemail@email.com">
-          <input type="text" class="basic-form" name="username" placeholder="@username">
-          <input type="password" class="basic-form" name="password" placeholder="password">
+          <input type="text" class="basic-form" name="name" placeholder="name" required="" >
+          <input type="text" class="basic-form" name="city" placeholder="city" required="" >
+          <input type="email" class="basic-form" name="email" placeholder="myemail@email.com" required="" >
+          <input type="text" class="basic-form" name="username" placeholder="@username" pattern="[@][A-Za-z]" required="" title="@username">
+          <input type="password" class="basic-form" name="password" placeholder="password" required="" >
         </div>
         <button type="submit" class="send-button">Signup</button>
 
