--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -9,5 +9,12 @@
 </head>
 <body>
   <%- body -%>
+
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous">
+  </script>
+  <script type="text/javascript" src="/javascripts/main.js"></script>
 </body>
 </html>
