add styles changes

--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -15,12 +15,12 @@
             <input type="text" class="basic-form" name="title" placeholder="title" required="">
             <input type="text" class="basic-form" name="author" placeholder="author" required="">
             <input type="text" class="basic-form" name="genre" placeholder="genre">
-            <input type="number" class="basic-form" name="pages" placeholder="pages">
+            <input type="number" class="basic-form" name="pages" placeholder="number of pages">
             <input type="hidden" class="basic-form" name="id" placeholder="bookid">
             <input type="hidden" class="basic-form" name="bookPicture" placeholder="bookid">
             <textarea class="description-form" name="description" placeholder="description"></textarea>
-            <label for="available">Do you want to share this book?</label> <br>
-              <input type="radio" name="available" value="1" required=""> Yes <br>
+            <label for="available">This book will be shared</label> <br>
+              <input type="radio" name="available" value="1" required="" checked="checked"> Yes <br>
               <!-- <input type="radio" name="available" value="0"> No -->
             <div class="add-file">
               <label for="cover">Upload a cover</label>
@@ -35,10 +35,3 @@
 
 
   </div>
-
-<!-- <footer class="footer">
-  <div class="footer-wrapper">
-    <p class="footer-quote">“A book lying idle on a shelf is wasted ammunition. Like money, books must be kept in constant circulation... A book is not only a friend, it makes friends for you. When you have possessed a book with mind and spirit, you are enriched. But when you pass it on you are enriched threefold.”</p>
-    <p class="footer-quote-author">Henry Miller</p>
-  </div>
-</footer> -->
