--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -8,27 +8,6 @@
   <div class="form-wrapper">
 
 
-    <!-- <form action="/signup" method="POST" id="form-container">
-      <label for="username">Username</label>
-      <input id="username" type="text" name="username" placeholder="JonSnow">
-      <br><br>
-      <label for="password">Password</label>
-      <input id="password" type="password" name="password" placeholder="Your password">
-
-      <% if (typeof message !== "undefined") { %>
-        <div class="error-message"><%= message %></div>
-      <% } %>
-      <br><br>
-
-      <button>Create account</button>
-
-      <p class="account-message">
-        Do you already have an account?
-        <a href="/login">Login</a>
-      </p>
-    </form> -->
-
-
     <h2 class="welcome-message">Share your books and meet other readers</h2>
     <form action="/signup" method="POST" id="login-form">
 
@@ -36,7 +15,7 @@
           <input type="text" class="basic-form" name="name" placeholder="name" required="" >
           <input type="text" class="basic-form" name="city" placeholder="city" required="" >
           <input type="email" class="basic-form" name="email" placeholder="myemail@email.com" required="" >
-          <input type="text" class="basic-form" name="username" placeholder="@username" pattern="[@][A-Za-z]" required="" title="@username">
+          <input type="text" class="basic-form" name="username" placeholder="@username" required="" title="@username">
           <input type="password" class="basic-form" name="password" placeholder="password" required="" >
         </div>
         <button type="submit" class="send-button">Signup</button>
