--- a/views/editbook.ejs
+++ b/views/editbook.ejs
@@ -17,7 +17,7 @@
           <input type="text" class="basic-form" name="title" placeholder="title" value="<%= book.title %>">
           <input type="text" class="basic-form" name="author" placeholder="author" value="<%= book.author %>">
           <input type="text" class="basic-form" name="genre" placeholder="genre" value="<%= book.genre %>">
-          <input type="text" class="basic-form" name="pages" placeholder="pages" value="<%= book.pages %>">
+          <input type="text" class="basic-form" name="pages" placeholder="number of pages" value="<%= book.pages %>">
           <textarea class="description-form" name="name" placeholder="description" value="<%= book.description %>"></textarea>
           <input type="file" class="basic-form" name="cover" id="cover" placeholder="upload cover" value="<%= book.cover %>">
           <input type="hidden" class="basic-form" name="id" placeholder="bookid" value="<%= book._id %>">
