--- a/views/allbooks.ejs
+++ b/views/allbooks.ejs
@@ -1,20 +1,22 @@
 <nav class="navbar">
+
   <div class="navbar-wrapper">
     <h3 class="brand">bookup</h3>
       <a href="/logout" class="navbar-button nabvar-button-right">Logout</a>
-      <!-- <a href="/" class="navbar-button navbar-button-left">Home</a> -->
   </div>
+
 </nav>
 
 <div class="container">
 
   <div class="profile-wrapper">
 
-
     <div class="profile-picture-wrapper">
       <img src="<%= user.picture%>" alt="profile-picture" class="profile-picture">
     </div>
+
     <div class="profile-data-wrapper">
+
       <ul>
         <li><%= user.name %></li>
         <li><%= user.username %></li>
@@ -22,18 +24,18 @@
         <li><%= user.city %></li>
         <li><%= user.phone %></li>
         <li><%= user.country %></li>
-
       </ul>
+      <a class="edit-profile-button" href="/edit-profile">Edit Profile</a>
     </div>
 
   </div>
 
-  <a class="edit-profile-button" href="/edit-profile">Edit Profile</a>
+
 
   <nav class="books-navbar">
     <a href="/">My Books</a>
-    <a href="/all-books">All Books</a>
     <a href="/available-books">Available Books</a>
+    <a href="/all-books">All Books</a>
     <a href="/messages">Messages</a>
   </nav>
 
@@ -48,7 +50,7 @@
 
           <li><%= book.title %></li>
           <li><%= book.author %></li>
-          <a class="book-options" href="/book/<%= book._id %>">See Book</a>
+          <a class="show-book" href="/book/<%= book._id %>">See Book</a>
 
         </ul>
       </div>
