--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-* body, div, span, h1, h2, h3, h4, ul, ol, li, p, nav, label {
+* body, div, span, h1, h2, h3, h4, ul, ol, li, p, nav, label, input {
   padding: 0;
   border: 0;
   margin: 0;
@@ -127,10 +127,6 @@ navbar-wrapper:after {
   margin: 30px;
 }
 
-.upload {
-
-}
-
 .send-button {
   width: 120px;
   height: 35px;
@@ -253,9 +249,25 @@ body {
 /*--------------------EDIT PROFILE-------------------*/
 
 .upload-file {
-  width: 100%;
-  margin: 0 auto;
+  text-align: center;
+}
+
+.upload-file label input{
   display: block;
+}
+
+.cancel-button {
+  width: 120px;
+  height: 35px;
+  margin: 25px auto;
+  display: block;
+  outline: none;
+  border: none;
+  color: #fff;
+  font-size: 14px;
+  background: #a32626;
+  border-radius: 5px 5px 5px 5px;
+  cursor: pointer;
 }
 
 /*----------------------NEW BOOK-------------------*/
@@ -304,17 +316,16 @@ body {
   width: 80px;
   height: 80px;
   background: #fff;
-  border: 2px solid #7fc857;
+  border: 3px solid #ccc;
   margin: 15px 7px 10px 15px;
-  /*border-radius: 4px 4px 4px 4px;*/
+  overflow: hidden;
   float: left;
   box-sizing: border-box;
   display: flex;
 }
 
 .profile-picture {
-  width: 95%;
-  height: 95%;
+  width: 100%;
   margin: auto;
 }
 
@@ -418,6 +429,8 @@ body {
   box-sizing: border-box;
   float: left;
   border-bottom: 3px solid #ddd;
+  display: flex;
+  flex-direction: column;
 }
 
 .mybooks:after {
@@ -442,36 +455,31 @@ body {
   background: #eee;
   float: left;
   box-sizing: border-box;
-  margin-bottom: 10px;
   overflow: hidden;
   display: flex;
   cursor: pointer;
 }
 
 .cover-wrapper img {
-  max-width: 100%;
-  height: auto;
-  margin: 0 auto;
-  margin: auto;
+
 }
 
 .cover {
   width: 98%;
   margin: 0 auto;
-  height: 100%;
+  max-width: 100%;
+  margin: auto;
+  /*overflow: hidden;*/
 }
 
 .book-list-info {
   position: relative;
+  padding: 10px 15px 10px 15px;
 }
 
-.book-list-info ul {
-  list-style-type: none;
+.book-list-info h1 {
+
   text-align: left;
-  padding: 0px 20px 0px 20px;
-}
-
-.book-list-info li {
   width: 100%;
   font-size: 13px;
   font-weight: bold;
@@ -481,16 +489,25 @@ body {
   text-overflow: ellipsis;
 }
 
-.book-list-info li:nth-child(2) {
+.book-list-info h2 {
   font-size: 12px;
   font-weight: normal;
+}
+
+.book-link {
+  text-decoration: none;
+  color: #333;
+}
+
+.book-link:hover {
+  color: #777;
 }
 
 .book-options {
   font-size: 13px;
   text-align: left;
-  margin-top: 10px;
-  padding: 0px 10px 7px 20px;
+  padding: 10px 10px 7px 0px;
+  display: flex;
 }
 
 .book-options a {
@@ -587,7 +604,6 @@ body {
     width: 150px;
     height: 150px;
     margin: 15px 15px 20px 15px;
-    padding: 5px 5px 5px 5px;
   }
 
   .edit-profile-button {
