--- a/views/allbooks.ejs
+++ b/views/allbooks.ejs
@@ -12,7 +12,13 @@
   <div class="profile-wrapper">
 
     <div class="profile-picture-wrapper">
-      <img src="<%= user.picture%>" alt="profile-picture" class="profile-picture">
+      <% if (!user.picture) { %>
+        <img src="/images/profile_default.jpg" alt="profile-picture" class="profile-picture">
+      <% } else if (user.picture == "uploads/undefined") { %>
+        <img src="/images/profile_default.jpg" alt="profile-picture" class="profile-picture">
+      <% } else { %>
+        <img src="<%= user.picture%>" alt="profile-picture" class="profile-picture">
+      <% } %>
     </div>
 
     <div class="profile-data-wrapper">
@@ -40,20 +46,35 @@
   </nav>
 
   <div class="mybooks-wrapper">
+
 <% book.forEach( (book) => { %>
     <div class="mybooks">
-      <div class="cover-wrapper">
+
+      <!-- <div class="cover-wrapper">
         <img src="<%= book.picture%>" alt="book cover picture" class="cover">
+      </div> -->
+
+      <div class="cover-wrapper" >
+        <a class="book-link" href="/<%=book._id%>/showbook">
+
+          <% if (!book.picture) { %>
+            <img src="/images/book_default.jpg" alt="book cover picture" class="cover">
+          <% } else if (book.picture == "uploads/undefined"){ %>
+            <img src="/images/book_default.jpg" alt="book cover picture" class="cover">
+          <% } else { %>
+            <img src="<%= book.picture%>" alt="" class="cover">
+          <% } %>
+
+        </a>
       </div>
+
       <div class="book-list-info">
-        <ul>
-
-          <li><%= book.title %></li>
-          <li><%= book.author %></li>
-          <a class="show-book" href="/book/<%= book._id %>">See Book</a>
-
-        </ul>
+        <a class="book-link" href="/<%=book._id%>/showbook">
+          <h1><%= book.title %></h1>
+          <h2><%= book.author %></h2>
+        </a>
       </div>
+
     </div>
 <% }); %>
   </div>
