--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -20,13 +20,14 @@
           <input type="number" class="basic-form" id="age" name="age" value="<%= user.age %>" placeholder="age">
           <input type="text" class="basic-form" id="gender" name="gender" value="<%= user.gender %>"  placeholder="gender">
           <div class="upload-file">
-            <label for="image">Upload a profile image</label>
+            <label for="image">Profile picture</label></br>
             <input type="file" class="upload" id="profile_image" name="profile_image" value="">
           </div>
 
 
         </div>
         <button type="submit" class="send-button">Save</button>
+        <a class="cancel-button" href="/">Cancel</a>
 
     </form>
   </div>
