--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,13 @@
   <div class="profile-wrapper">
 
     <div class="profile-picture-wrapper">
-      <img src="<%= user.picture%>" alt="profile-picture" class="profile-picture">
+      <% if (!user.picture) { %>
+        <img src="/images/profile_default.jpg" alt="profile-picture" class="profile-picture">
+      <% } else if (user.picture == "uploads/undefined") { %>
+        <img src="/images/profile_default.jpg" alt="profile-picture" class="profile-picture">
+      <% } else { %>
+        <img src="<%= user.picture%>" alt="profile-picture" class="profile-picture">
+      <% } %>
     </div>
     <div class="profile-data-wrapper">
       <ul>
@@ -51,30 +57,32 @@
  <% if (user._id.equals(book.current_user)) { %>
     <div class="mybooks">
 
-      <a class="book-link" href="/<%=book._id%>/showbook">
-        <div class="cover-wrapper">
+          <div class="cover-wrapper" >
+            <a class="book-link" href="/<%=book._id%>/showbook">
 
-          <img src="<%= book.picture%>" alt="book cover picture" class="cover">
+              <% if (!book.picture) { %>
+                <img src="/images/book_default.jpg" alt="book cover picture" class="cover">
+              <% } else if (book.picture == "uploads/undefined"){ %>
+                <img src="/images/book_default.jpg" alt="book cover picture" class="cover">
+              <% } else { %>
+                <img src="<%= book.picture%>" alt="" class="cover">
+              <% } %>
 
-        </div>
-      </a>
+            </a>
+          </div>
 
       <div class="book-list-info">
-        <ul>
-          <li><%= book.title %></li>
-          <li><%= book.author %></li>
-          <!-- <li>Genre</li>
-          <li>Pages</li> -->
-        </ul>
+        <a class="book-link" href="/<%=book._id%>/showbook">
+          <h1><%= book.title %></h1>
+          <h2><%= book.author %></h2>
+        </a>
         <div class="book-options">
-
-
           <a href="/<%= book._id %>/edit">Edit</a>
           <!-- <a href="/<%=book._id%>/showbook">Show</a> -->
           <a href="/<%=book._id%>/deletebook">Delete</a>
-
         </div>
       </div>
+
     </div>
     <% }; %>
 
