--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -36,7 +36,7 @@
           <input type="text" class="basic-form" name="name" placeholder="name" required="" >
           <input type="text" class="basic-form" name="city" placeholder="city" required="" >
           <input type="email" class="basic-form" name="email" placeholder="myemail@email.com" required="" >
-          <input type="text" class="basic-form" name="username" placeholder="@username" pattern="[@][A-Za-z]" required="" title="@username">
+          <input type="text" class="basic-form" name="username" placeholder="@username" required="" title="@username">
           <input type="password" class="basic-form" name="password" placeholder="password" required="" >
         </div>
         <button type="submit" class="send-button">Signup</button>
