--- a/views/availablebooks.ejs
+++ b/views/availablebooks.ejs
@@ -48,6 +48,7 @@
         <ul>
           <li><%= book.title %></li>
           <li><%= book.author %></li>
+          <li><a class="book-options" href="/sendmessage/<%= book._id %>">Contact</a></li>
         </ul>
       </div>
     </div>
