--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -26,7 +26,7 @@
 
 
       <p class="account-message">
-        Do you still don't have an account?
+        Still don't have an account?
         <a href="/signup">Signup</a>
       </p>
     </form>
