--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -8,7 +8,7 @@
 <div class="login-container">
 
   <div class="form-wrapper">
-    <form action="/edit" method="POST" enctype="multipart/form-data" id="login-form">
+    <form action="/edit" method="POST" enctype="multipart/form-data">
         <h3 class="new-account-header">Edit your profile</h3>
         <div class="form-group">
 
