--- a/views/availablebooks.ejs
+++ b/views/availablebooks.ejs
@@ -66,7 +66,7 @@
         <a class="book-link" href="/<%=book._id%>/showbook">
           <h1><%= book.title %></h1>
           <h2><%= book.author %></h2>
-           <li><a class="book-options" href="/sendmessage/<%= book._id %>">Contact</a></li>
+          <a class="book-options" href="/sendmessage/<%= book._id %>">Contact</a>
         </a>
 
       </div>
